# patient_agent

./: .gitignore  BACKEND-SPRINGBOOT-README.md  PROJECT_ARCHITECTURE_OVERVIEW.md  README.md  ROUTER_AGENT_OPTIMIZATION.md  TOOL_CALLING_IMPLEMENTATION.md  integration_test_report_analysis.sh
services/ai-agent-fastapi/: .env.example  README.md  TOOL_CALLING_EXAMPLES.py  debug_intent.py  pyproject.toml  test_router_agent.py
services/ai-agent-fastapi/app/: main.py
services/ai-agent-fastapi/app/agents/base/: base_agent.py
services/ai-agent-fastapi/app/agents/knowledge/: knowledge_agent.py
services/ai-agent-fastapi/app/agents/record/: __init__.py  record_agent.py
services/ai-agent-fastapi/app/agents/report/: report_agent.py
services/ai-agent-fastapi/app/agents/router/: intent_classifier.py  router_agent.py
services/ai-agent-fastapi/app/agents/symptom/: symptom_agent.py
services/ai-agent-fastapi/app/core/: settings.py
services/ai-agent-fastapi/app/integrations/mysql/: mysql_client.py
services/ai-agent-fastapi/app/integrations/rabbitmq/: chat_task_consumer.py
services/ai-agent-fastapi/app/integrations/redis/: redis_client.py
services/ai-agent-fastapi/app/llm/: llm_client.py
services/ai-agent-fastapi/app/memory/session/: session_manager.py
services/ai-agent-fastapi/app/memory/store/: chat_memory_store.py
services/ai-agent-fastapi/app/observability/logging/: logging_config.py
services/ai-agent-fastapi/app/tools/: TOOL_CALLING_DOC.py  __init__.py  base_tool.py
services/ai-agent-fastapi/tests/services/: test_report_structured_parser.py
(+145 files in other folders)
