[project]
name = "patient-agent-ai"
version = "0.1.0"
description = "FastAPI multi-agent service for patient assistant"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-huggingface>=0.1.2",
  "langchain-milvus>=0.1.6",
  "langchain-ollama>=0.2.0",
  "pydantic>=2.8.0",
  "pymilvus>=2.4.0",
  "pypdf>=4.2.0",
  "redis>=5.0.0",
  "pika>=1.3.0",
  "mysql-connector-python>=9.0.0"
]

[tool.uv]
dev-dependencies = [
  "pytest>=8.2.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0"
]
